feat: 기본 플러그인 구조 작성

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"],
+  "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules/*", "lib", "**/*.js"]
 }
