--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
       "error",
       { "argsIgnorePattern": "^_" }
     ],
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "class-methods-use-this": "off"
   },
   "ignorePatterns": ["node_modules/", "lib", "**/*.js"]
 }
